--- a/notebooks/IS-SEM.ipynb
+++ b/notebooks/IS-SEM.ipynb
@@ -14,30 +14,14 @@
    "execution_count": 1,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "  ___  ____  ____  ____  ____ ©\n",
-      " /__    /   ____/   /   ____/      17.0\n",
-      "___/   /   /___/   /   /___/       MP—Parallel Edition\n",
-      "\n",
-      " Statistics and Data Science       Copyright 1985-2021 StataCorp LLC\n",
-      "                                   StataCorp\n",
-      "                                   4905 Lakeway Drive\n",
-      "                                   College Station, Texas 77845 USA\n",
-      "                                   800-STATA-PC        https://www.stata.com\n",
-      "                                   979-696-4600        stata@stata.com\n",
-      "\n",
-      "Stata license: Single-user 8-core , expiring  1 Jan 2025\n",
-      "Serial number: 501709301094\n",
-      "  Licensed to: Colin's Stata\n",
-      "               Love U\n",
-      "\n",
-      "Notes:\n",
-      "      1. Unicode is supported; see help unicode_advice.\n",
-      "      2. More than 2 billion observations are allowed; see help obs_advice.\n",
-      "      3. Maximum number of variables is set to 5,000; see help set_maxvar.\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'loader'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[1], line 10\u001B[0m\n\u001B[1;32m      8\u001B[0m sys\u001B[38;5;241m.\u001B[39mpath\u001B[38;5;241m.\u001B[39mappend(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m/home/ubuntu/notebook/Investor-Sentiment\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[1;32m      9\u001B[0m sys\u001B[38;5;241m.\u001B[39mpath\u001B[38;5;241m.\u001B[39mappend(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m/usr/local/stata17/utilities\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[0;32m---> 10\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mloader\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mfindata_loader\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m Loader\n\u001B[1;32m     11\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mutils\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01msql\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m DB\n\u001B[1;32m     13\u001B[0m \u001B[38;5;66;03m# Stata\u001B[39;00m\n",
+      "\u001B[0;31mModuleNotFoundError\u001B[0m: No module named 'loader'"
      ]
     }
    ],
@@ -237,9 +221,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "stata",
+   "name": "pytorch",
    "language": "python",
-   "display_name": "Stata"
+   "display_name": "Rapids"
   },
   "language_info": {
    "codemirror_mode": {
