--- a/notebooks/IS-TrainCNN-R.ipynb
+++ b/notebooks/IS-TrainCNN-R.ipynb
@@ -2,52 +2,31 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# CNN迁移学习"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## 环境导入"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false,
-    "execution": {
-     "iopub.execute_input": "2023-01-06T22:57:53.487034Z",
-     "iopub.status.busy": "2023-01-06T22:57:53.486794Z",
-     "iopub.status.idle": "2023-01-06T22:57:55.389696Z",
-     "shell.execute_reply": "2023-01-06T22:57:55.389019Z",
-     "shell.execute_reply.started": "2023-01-06T22:57:53.486981Z"
-    },
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-01-16 16:04:27.151982: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
+      "2023-02-01 12:13:22.552319: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
      ]
     }
    ],
@@ -84,55 +63,37 @@
     "\n",
     "# 混合精度\n",
     "# from tensorflow.keras import mixed_precision"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## 参数区"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false,
-    "execution": {
-     "iopub.execute_input": "2023-01-06T22:57:55.391852Z",
-     "iopub.status.busy": "2023-01-06T22:57:55.391148Z",
-     "iopub.status.idle": "2023-01-06T22:57:55.394671Z",
-     "shell.execute_reply": "2023-01-06T22:57:55.394102Z",
-     "shell.execute_reply.started": "2023-01-06T22:57:55.391829Z"
-    },
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
    "outputs": [],
    "source": [
     "# policy = mixed_precision.Policy('mixed_float16')\n",
     "# mixed_precision.set_global_policy(policy)\n",
     "# os.environ['TF_KERAS'] = '1'  # 必须使用tf.keras\n",
     "# os.environ['TF_XLA_FLAGS'] = '--tf_xla_auto_jit=1'  # 启用XLA"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false,
-    "execution": {
-     "iopub.execute_input": "2023-01-06T22:57:55.396014Z",
-     "iopub.status.busy": "2023-01-06T22:57:55.395791Z",
-     "iopub.status.idle": "2023-01-06T22:57:55.400927Z",
-     "shell.execute_reply": "2023-01-06T22:57:55.400381Z",
-     "shell.execute_reply.started": "2023-01-06T22:57:55.395996Z"
-    },
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
    "outputs": [],
    "source": [
     "DATASET_PATH_ROOT = '/data/DataSets/TWITTER_IMG_SENT_2015/dataset/'\n",
@@ -141,35 +102,27 @@
     "\n",
     "TOTAL_EPOCH = 500\n",
     "VAL_FREQ = 1"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "超参数\n",
     "\n",
     "200次迭代后表现良好\n",
     "\n",
     "/home/ubuntu/notebook/Models/TWITTER_SENT_2015/logs/hparam_tuning/20230107-065755/run-2"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false,
-    "execution": {
-     "iopub.execute_input": "2023-01-06T22:57:55.402067Z",
-     "iopub.status.busy": "2023-01-06T22:57:55.401647Z",
-     "iopub.status.idle": "2023-01-06T22:57:55.407257Z",
-     "shell.execute_reply": "2023-01-06T22:57:55.406732Z",
-     "shell.execute_reply.started": "2023-01-06T22:57:55.402040Z"
-    },
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
    "outputs": [],
    "source": [
     "HP_NUM_UNITS = hp.HParam('num_units', hp.Discrete([512, ]))\n",
@@ -177,31 +130,23 @@
     "HP_OPTIMIZER = hp.HParam('optimizer', hp.Discrete(['adam']))\n",
     "# HP_METHOD = hp.HParam('train_method', hp.Discrete(['TransferLearning', 'FineTune']))\n",
     "HP_L_RATE = hp.HParam('learning_rate', hp.Discrete([0.001, 0.0001, 0.00001]))"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## 数据准备"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false,
-    "execution": {
-     "iopub.execute_input": "2023-01-06T22:57:55.408388Z",
-     "iopub.status.busy": "2023-01-06T22:57:55.408000Z",
-     "iopub.status.idle": "2023-01-06T22:57:55.477795Z",
-     "shell.execute_reply": "2023-01-06T22:57:55.477188Z",
-     "shell.execute_reply.started": "2023-01-06T22:57:55.408368Z"
-    },
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
    "outputs": [
     {
      "name": "stdout",
@@ -245,28 +190,23 @@
     "train_generator = train_datagen.flow_from_directory(directory=f'{DATASET_PATH_ROOT}train', target_size=(299, 299), batch_size=617)\n",
     "val_generator = val_datagen.flow_from_directory(directory=f'{DATASET_PATH_ROOT}validation', target_size=(299, 299), batch_size=176)\n",
     "test_generator = test_datagen.flow_from_directory(directory=f'{DATASET_PATH_ROOT}test', target_size=(299, 299), batch_size=89)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## 迁移学习"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false,
-    "execution": {
-     "iopub.execute_input": "2023-01-06T22:57:55.479095Z",
-     "iopub.status.busy": "2023-01-06T22:57:55.478623Z"
-    },
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
    "outputs": [
     {
      "data": {
@@ -288,17 +228,14 @@
     "%tensorboard --logdir {LOG_DIR} --port 6006 --bind_all\n",
     "# tensorboard --logdir /data/Models/TWITTER_SENT_2015/logs/hparam_tuning/20230110-172807 --port 6006 --bind_all\n",
     "# @formatter:on"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
    "outputs": [],
    "source": [
     "def start_transfer_learning(run_dir, hparams):\n",
@@ -377,25 +314,23 @@
     "    # print(scores)\n",
     "\n",
     "    # return scores\n"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## 超参数调整"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    },
-    "tags": []
-   },
    "outputs": [],
    "source": [
     "# 超参数运行\n",
@@ -417,69 +352,68 @@
     "                    session_num += 1\n",
     "\n",
     "# run_hparams()"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## 推理任务"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
    "outputs": [],
    "source": [
     "\n",
     "# BEST_TRAINACC_MODEL = f'/home/ubuntu/notebook/Models/TWITTER_SENT_2015/logs/hparam_tuning/20230107-065755/run-7/Twitter2015_iv3_tl.h5'\n",
     "# read_model = load_model(BEST_TRAINACC_MODEL)\n",
     "# read_model.evaluate(test_generator)\n"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
    "outputs": [],
    "source": [
     "# 2 0.7977527976036072\n",
     "#4 0.8089\n",
     "#6 0.82\n",
     "#"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "TensorFlow",
+   "name": "pytorch",
    "language": "python",
-   "name": "tensorflow"
+   "display_name": "Rapids"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 0
 }
