--- a/notebooks/IS-SEM.ipynb
+++ b/notebooks/IS-SEM.ipynb
@@ -11,20 +11,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'loader'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[1], line 10\u001B[0m\n\u001B[1;32m      8\u001B[0m sys\u001B[38;5;241m.\u001B[39mpath\u001B[38;5;241m.\u001B[39mappend(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m/home/ubuntu/notebook/Investor-Sentiment\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[1;32m      9\u001B[0m sys\u001B[38;5;241m.\u001B[39mpath\u001B[38;5;241m.\u001B[39mappend(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m/usr/local/stata17/utilities\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[0;32m---> 10\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mloader\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mfindata_loader\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m Loader\n\u001B[1;32m     11\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mutils\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01msql\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m DB\n\u001B[1;32m     13\u001B[0m \u001B[38;5;66;03m# Stata\u001B[39;00m\n",
-      "\u001B[0;31mModuleNotFoundError\u001B[0m: No module named 'loader'"
-     ]
-    }
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "import cudf  #CUDA计算\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# 自行编写的包\n",
+    "sys.path.append('/home/ubuntu/notebook/Investor-Sentiment')\n",
+    "sys.path.append('/usr/local/stata17/utilities')\n",
+    "from loader.findata_loader import Loader\n",
+    "from utils.sql import DB\n",
+    "\n",
+    "# Stata\n",
+    "from pystata import config\n",
+    "\n",
+    "config.init('mp')\n",
+    "# ------------------------------数据集路径----------------------------------#\n",
+    "DATASETS_PATH = '/data/DataSets/investor_sentiment/'  #%% md\n",
+    "# 结构方程模型专题\n"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
@@ -45,6 +62,135 @@
     "# ------------------------------数据集路径----------------------------------#\n",
     "DATASETS_PATH = '/data/DataSets/investor_sentiment/'"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 数据准备\n",
+    "详细的各个指标计算见每个笔记本,这里是已经处理和计算好的数据"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 媒体情绪"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "df_media = cudf.read_parquet(DATASETS_PATH + 'MEDIA_SENT_TDATE_WC.parquet')\n",
+    "df_media"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 投资者情绪"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "df_investor = cudf.read_parquet(DATASETS_PATH + 'FORUM_SENT_TDATE_CSMAR.parquet').fillna(0)\n",
+    "df_investor"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 分析师情绪"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "df_analyst = cudf.read_parquet(DATASETS_PATH + 'ANALYST_SENT_TDATE_SUNTIME.parquet')\n",
+    "df_analyst"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 合并和筛选"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "df_sem = (\n",
+    "        cudf.merge(df_analyst.reset_index(),\n",
+    "                   cudf.merge(df_media.reset_index(), df_investor.reset_index(), on='trade_date', how='left'),\n",
+    "                   on='trade_date', how='left').astype(dtype={'trade_date': 'str'})\n",
+    "        .set_index(['trade_date', 'ts_code']).sort_index().reset_index()\n",
+    ")\n",
+    "\n",
+    "df_sem"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 结构方程模型"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# 导出到stata分析\n",
+    "# df_sem.to_csv(DATASETS_PATH + 'stata_sem.csv')\n",
+    "# pd.DataFrame.to_stata()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
    "metadata": {
     "collapsed": false
    }
