--- a/notebooks/IS-SEM.ipynb
+++ b/notebooks/IS-SEM.ipynb
@@ -31,37 +31,9 @@
     "\n",
     "config.init('mp')\n",
     "# ------------------------------数据集路径----------------------------------#\n",
-    "DATASETS_PATH = '/data/DataSets/investor_sentiment/'  #%% md\n",
+    "DATASETS_PATH = '/data/DataSets/investor_sentiment/'\n",
     "# 结构方程模型专题\n",
     "#"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "import os\n",
-    "import cudf  #CUDA计算\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "# 自行编写的包\n",
-    "sys.path.append('/home/ubuntu/notebook/Investor-Sentiment')\n",
-    "sys.path.append('/usr/local/stata17/utilities')\n",
-    "from loader.findata_loader import Loader\n",
-    "from utils.sql import DB\n",
-    "\n",
-    "# Stata\n",
-    "from pystata import config\n",
-    "\n",
-    "config.init('mp')\n",
-    "# ------------------------------数据集路径----------------------------------#\n",
-    "DATASETS_PATH = '/data/DataSets/investor_sentiment/'"
    ],
    "metadata": {
     "collapsed": false
