--- a/notebooks/IS-Data.ipynb
+++ b/notebooks/IS-Data.ipynb
@@ -165,7 +165,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## 构建SEM的数据"
+    "## 构建合并的数据"
    ],
    "metadata": {
     "collapsed": false
@@ -173,23 +173,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
       "text/plain": "      trade_date    ts_code  CON_YEAR        CON_OR        CON_NP  CON_EPS  \\\n7       20140102  000985.SH      2014  3.034892e+09  27421.678403   0.6857   \n18      20140103  000985.SH      2014  3.033876e+09  27421.601209   0.6857   \n29      20140106  000985.SH      2014  3.033345e+09  27412.012060   0.6854   \n40      20140107  000985.SH      2014  3.028546e+09  27384.608096   0.6846   \n51      20140108  000985.SH      2014  3.028892e+09  27355.547003   0.6838   \n...          ...        ...       ...           ...           ...      ...   \n21350   20211227  000985.SH      2021  6.389869e+09  53799.927579   0.7131   \n21361   20211228  000985.SH      2021  6.391559e+09  53788.880275   0.7129   \n21372   20211229  000985.SH      2021  6.389955e+09  53725.674838   0.7120   \n21383   20211230  000985.SH      2021  6.390729e+09  53695.625032   0.7116   \n21394   20211231  000985.SH      2021  6.389440e+09  53655.694957   0.7111   \n\n             CON_NA  CON_PB  CON_PS   CON_PE  ...    NIPO_R    RIPO_R  \\\n7      2.017385e+09  1.3334  0.8863   9.8095  ... -0.993200 -0.429099   \n18     2.017584e+09  1.3213  0.8787   9.7214  ... -0.993200 -0.429099   \n29     2.027389e+09  1.2895  0.8619   9.5373  ... -0.993200 -0.429099   \n40     2.027386e+09  1.2917  0.8647   9.5629  ... -0.993200 -0.429099   \n51     2.028490e+09  1.2935  0.8663   9.5920  ... -0.993200 -0.429099   \n...             ...     ...     ...      ...  ...       ...       ...   \n21350  5.236956e+09  1.7835  1.4617  17.3613  ... -0.044895 -0.374305   \n21361  5.237495e+09  1.7933  1.4695  17.4615  ...  2.955105 -0.346122   \n21372  5.237052e+09  1.7779  1.4571  17.3305  ... -1.044895 -0.453585   \n21383  5.236812e+09  1.7905  1.4672  17.4624  ...  1.955105 -0.193822   \n21394  5.237010e+09  1.7997  1.4751  17.5661  ... -0.044895 -0.012409   \n\n            SR_R  l1_TURN_R    lnPD_R  SENT_INDEX_R  SENT_INDEX_EX  \\\n7      15.745780  -0.003943 -0.208500     -1.191905      -0.571980   \n18     15.745780  -0.004333 -0.208500     -1.182604      -0.598652   \n29     15.745780  -0.003813 -0.208500     -1.175354      -0.623006   \n40     15.745780  -0.003643 -0.208500     -1.172984      -0.644795   \n51     15.745780  -0.004513 -0.208500     -1.185114      -0.664723   \n...          ...        ...       ...           ...            ...   \n21350  -2.832969   0.001832  0.097983      0.390557       1.170102   \n21361  -2.832969   0.000582  0.097983      1.186737       1.127746   \n21372  -2.832969   0.000302  0.097983      0.013389       1.149856   \n21383  -2.832969   0.000072  0.097983      0.972127       1.079838   \n21394  -2.832969   0.000102  0.097983      0.720920       1.088991   \n\n       SENT_INDEX_DEX  SENT_INDEX_R_EX  SENT_INDEX_R_DEX  \n7           -0.588495        -0.435412         -0.451046  \n18          -0.588830        -0.502679         -0.452930  \n29          -0.589509        -0.563137         -0.455863  \n40          -0.590505        -0.617575         -0.459753  \n51          -0.591815        -0.666961         -0.464538  \n...               ...              ...               ...  \n21350        1.302731         0.960139          1.050876  \n21361        1.298598         0.909492          1.046500  \n21372        1.293518         0.934144          1.040757  \n21383        1.288670         0.852272          1.035358  \n21394        1.283711         0.862929          1.029868  \n\n[1944 rows x 70 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>trade_date</th>\n      <th>ts_code</th>\n      <th>CON_YEAR</th>\n      <th>CON_OR</th>\n      <th>CON_NP</th>\n      <th>CON_EPS</th>\n      <th>CON_NA</th>\n      <th>CON_PB</th>\n      <th>CON_PS</th>\n      <th>CON_PE</th>\n      <th>...</th>\n      <th>NIPO_R</th>\n      <th>RIPO_R</th>\n      <th>SR_R</th>\n      <th>l1_TURN_R</th>\n      <th>lnPD_R</th>\n      <th>SENT_INDEX_R</th>\n      <th>SENT_INDEX_EX</th>\n      <th>SENT_INDEX_DEX</th>\n      <th>SENT_INDEX_R_EX</th>\n      <th>SENT_INDEX_R_DEX</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>7</th>\n      <td>20140102</td>\n      <td>000985.SH</td>\n      <td>2014</td>\n      <td>3.034892e+09</td>\n      <td>27421.678403</td>\n      <td>0.6857</td>\n      <td>2.017385e+09</td>\n      <td>1.3334</td>\n      <td>0.8863</td>\n      <td>9.8095</td>\n      <td>...</td>\n      <td>-0.993200</td>\n      <td>-0.429099</td>\n      <td>15.745780</td>\n      <td>-0.003943</td>\n      <td>-0.208500</td>\n      <td>-1.191905</td>\n      <td>-0.571980</td>\n      <td>-0.588495</td>\n      <td>-0.435412</td>\n      <td>-0.451046</td>\n    </tr>\n    <tr>\n      <th>18</th>\n      <td>20140103</td>\n      <td>000985.SH</td>\n      <td>2014</td>\n      <td>3.033876e+09</td>\n      <td>27421.601209</td>\n      <td>0.6857</td>\n      <td>2.017584e+09</td>\n      <td>1.3213</td>\n      <td>0.8787</td>\n      <td>9.7214</td>\n      <td>...</td>\n      <td>-0.993200</td>\n      <td>-0.429099</td>\n      <td>15.745780</td>\n      <td>-0.004333</td>\n      <td>-0.208500</td>\n      <td>-1.182604</td>\n      <td>-0.598652</td>\n      <td>-0.588830</td>\n      <td>-0.502679</td>\n      <td>-0.452930</td>\n    </tr>\n    <tr>\n      <th>29</th>\n      <td>20140106</td>\n      <td>000985.SH</td>\n      <td>2014</td>\n      <td>3.033345e+09</td>\n      <td>27412.012060</td>\n      <td>0.6854</td>\n      <td>2.027389e+09</td>\n      <td>1.2895</td>\n      <td>0.8619</td>\n      <td>9.5373</td>\n      <td>...</td>\n      <td>-0.993200</td>\n      <td>-0.429099</td>\n      <td>15.745780</td>\n      <td>-0.003813</td>\n      <td>-0.208500</td>\n      <td>-1.175354</td>\n      <td>-0.623006</td>\n      <td>-0.589509</td>\n      <td>-0.563137</td>\n      <td>-0.455863</td>\n    </tr>\n    <tr>\n      <th>40</th>\n      <td>20140107</td>\n      <td>000985.SH</td>\n      <td>2014</td>\n      <td>3.028546e+09</td>\n      <td>27384.608096</td>\n      <td>0.6846</td>\n      <td>2.027386e+09</td>\n      <td>1.2917</td>\n      <td>0.8647</td>\n      <td>9.5629</td>\n      <td>...</td>\n      <td>-0.993200</td>\n      <td>-0.429099</td>\n      <td>15.745780</td>\n      <td>-0.003643</td>\n      <td>-0.208500</td>\n      <td>-1.172984</td>\n      <td>-0.644795</td>\n      <td>-0.590505</td>\n      <td>-0.617575</td>\n      <td>-0.459753</td>\n    </tr>\n    <tr>\n      <th>51</th>\n      <td>20140108</td>\n      <td>000985.SH</td>\n      <td>2014</td>\n      <td>3.028892e+09</td>\n      <td>27355.547003</td>\n      <td>0.6838</td>\n      <td>2.028490e+09</td>\n      <td>1.2935</td>\n      <td>0.8663</td>\n      <td>9.5920</td>\n      <td>...</td>\n      <td>-0.993200</td>\n      <td>-0.429099</td>\n      <td>15.745780</td>\n      <td>-0.004513</td>\n      <td>-0.208500</td>\n      <td>-1.185114</td>\n      <td>-0.664723</td>\n      <td>-0.591815</td>\n      <td>-0.666961</td>\n      <td>-0.464538</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>21350</th>\n      <td>20211227</td>\n      <td>000985.SH</td>\n      <td>2021</td>\n      <td>6.389869e+09</td>\n      <td>53799.927579</td>\n      <td>0.7131</td>\n      <td>5.236956e+09</td>\n      <td>1.7835</td>\n      <td>1.4617</td>\n      <td>17.3613</td>\n      <td>...</td>\n      <td>-0.044895</td>\n      <td>-0.374305</td>\n      <td>-2.832969</td>\n      <td>0.001832</td>\n      <td>0.097983</td>\n      <td>0.390557</td>\n      <td>1.170102</td>\n      <td>1.302731</td>\n      <td>0.960139</td>\n      <td>1.050876</td>\n    </tr>\n    <tr>\n      <th>21361</th>\n      <td>20211228</td>\n      <td>000985.SH</td>\n      <td>2021</td>\n      <td>6.391559e+09</td>\n      <td>53788.880275</td>\n      <td>0.7129</td>\n      <td>5.237495e+09</td>\n      <td>1.7933</td>\n      <td>1.4695</td>\n      <td>17.4615</td>\n      <td>...</td>\n      <td>2.955105</td>\n      <td>-0.346122</td>\n      <td>-2.832969</td>\n      <td>0.000582</td>\n      <td>0.097983</td>\n      <td>1.186737</td>\n      <td>1.127746</td>\n      <td>1.298598</td>\n      <td>0.909492</td>\n      <td>1.046500</td>\n    </tr>\n    <tr>\n      <th>21372</th>\n      <td>20211229</td>\n      <td>000985.SH</td>\n      <td>2021</td>\n      <td>6.389955e+09</td>\n      <td>53725.674838</td>\n      <td>0.7120</td>\n      <td>5.237052e+09</td>\n      <td>1.7779</td>\n      <td>1.4571</td>\n      <td>17.3305</td>\n      <td>...</td>\n      <td>-1.044895</td>\n      <td>-0.453585</td>\n      <td>-2.832969</td>\n      <td>0.000302</td>\n      <td>0.097983</td>\n      <td>0.013389</td>\n      <td>1.149856</td>\n      <td>1.293518</td>\n      <td>0.934144</td>\n      <td>1.040757</td>\n    </tr>\n    <tr>\n      <th>21383</th>\n      <td>20211230</td>\n      <td>000985.SH</td>\n      <td>2021</td>\n      <td>6.390729e+09</td>\n      <td>53695.625032</td>\n      <td>0.7116</td>\n      <td>5.236812e+09</td>\n      <td>1.7905</td>\n      <td>1.4672</td>\n      <td>17.4624</td>\n      <td>...</td>\n      <td>1.955105</td>\n      <td>-0.193822</td>\n      <td>-2.832969</td>\n      <td>0.000072</td>\n      <td>0.097983</td>\n      <td>0.972127</td>\n      <td>1.079838</td>\n      <td>1.288670</td>\n      <td>0.852272</td>\n      <td>1.035358</td>\n    </tr>\n    <tr>\n      <th>21394</th>\n      <td>20211231</td>\n      <td>000985.SH</td>\n      <td>2021</td>\n      <td>6.389440e+09</td>\n      <td>53655.694957</td>\n      <td>0.7111</td>\n      <td>5.237010e+09</td>\n      <td>1.7997</td>\n      <td>1.4751</td>\n      <td>17.5661</td>\n      <td>...</td>\n      <td>-0.044895</td>\n      <td>-0.012409</td>\n      <td>-2.832969</td>\n      <td>0.000102</td>\n      <td>0.097983</td>\n      <td>0.720920</td>\n      <td>1.088991</td>\n      <td>1.283711</td>\n      <td>0.862929</td>\n      <td>1.029868</td>\n    </tr>\n  </tbody>\n</table>\n<p>1944 rows × 70 columns</p>\n</div>"
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_sem = (pd.merge(df_analyst, df_finmarket.drop(columns=['trade_year']), on='trade_date'))\n",
-    "df_sem = df_sem.query(\"ts_code=='000985.SH'\").astype(dtype={'trade_date': 'str'})\n",
-    "df_sem.to_csv('/home/ubuntu/notebooks/DataSets/investor_sentiment/SEM_MAF_2014_2021.csv')\n",
-    "df_sem"
+    "df_merge = (pd.merge(df_analyst, df_finmarket.drop(columns=['trade_year']), on='trade_date'))\n",
+    "df_merge = df_merge.query(\"ts_code=='000985.SH'\").astype(dtype={'trade_date': 'str'})\n",
+    "df_merge.to_csv('/home/ubuntu/notebooks/DataSets/investor_sentiment/SEM_MAF_2014_2021.csv')\n",
+    "df_merge"
    ],
    "metadata": {
     "collapsed": false
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -304,12 +304,15 @@
       "SENT_IN~R_EX |      1,944    .0812574    .7666776  -1.083049   2.099405\n",
       "SENT_I~R_DEX |      1,944    .0539826    .7268505  -.8474488   1.663493\n",
       "\n",
+      ". \n",
+      ". //模型设定\n",
+      ". \n",
       ". \n"
      ]
     }
    ],
    "source": [
-    "%%stata -d df_sem -force\n",
+    "%%stata -d df_merge -force\n",
     "/*{*/\n",
     "sum\n",
     "\n",
