--- a/notebooks/IS-Data.ipynb
+++ b/notebooks/IS-Data.ipynb
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -316,7 +316,10 @@
     "/*{*/\n",
     "sum\n",
     "\n",
-    "//模型设定\n"
+    "//模型设定\n",
+    "\n",
+    "//回归分析\n",
+    "reg"
    ],
    "metadata": {
     "collapsed": false
