--- a/notebooks/IS-Data.ipynb
+++ b/notebooks/IS-Data.ipynb
@@ -198,6 +198,26 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "trade_date           object\nts_code              object\nCON_YEAR             uint32\nCON_OR              float64\nCON_NP              float64\n                     ...   \nSENT_INDEX_R        float64\nSENT_INDEX_EX       float64\nSENT_INDEX_DEX      float64\nSENT_INDEX_R_EX     float64\nSENT_INDEX_R_DEX    float64\nLength: 70, dtype: object"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_merge.dtypes"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "# @formatter:off"
@@ -208,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
@@ -216,6 +236,17 @@
      "text": [
       "\n",
       ". /*{*/\n",
+      ". \n",
+      ". //模型设定\n",
+      ". encode ts_code,gen(id)\n",
+      "\n",
+      ". tsset time\n",
+      "\n",
+      "Time variable: time, 1 to 1944\n",
+      "        Delta: 1 unit\n",
+      "\n",
+      ". \n",
+      ". //描述性统计\n",
       ". sum\n",
       "\n",
       "    Variable |        Obs        Mean    Std. dev.       Min        Max\n",
@@ -303,9 +334,11 @@
       "SENT_I~X_DEX |      1,944     .129532    .6958647  -.7988879   1.629092\n",
       "SENT_IN~R_EX |      1,944    .0812574    .7666776  -1.083049   2.099405\n",
       "SENT_I~R_DEX |      1,944    .0539826    .7268505  -.8474488   1.663493\n",
+      "-------------+---------------------------------------------------------\n",
+      "          id |      1,944           1           0          1          1\n",
       "\n",
       ". \n",
-      ". //模型设定\n",
+      ". \n",
       ". \n",
       ". \n"
      ]
@@ -314,12 +347,15 @@
    "source": [
     "%%stata -d df_merge -force\n",
     "/*{*/\n",
-    "sum\n",
     "\n",
     "//模型设定\n",
+    "encode ts_code,gen(id)\n",
+    "tsset time\n",
     "\n",
-    "//回归分析\n",
-    "reg"
+    "//描述性统计\n",
+    "sum\n",
+    "\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false
